--- a/.homeycompose/capabilities/measure_watt_max.json
+++ b/.homeycompose/capabilities/measure_watt_max.json
@@ -7,6 +7,7 @@
     "it": "Massimo",
     "no": "Maximum",
     "fr": "Maximum",
+    "dk": "Maximum",
     "nl": "Maximum"
   },
   "uiComponent": "sensor",
