--- a/.homeycompose/capabilities/measure_watt_min.json
+++ b/.homeycompose/capabilities/measure_watt_min.json
@@ -7,6 +7,7 @@
     "it": "Minimo",
     "no": "Minimum",
     "fr": "Maximum",
+    "dk": "Maximum",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
