--- a/.homeycompose/capabilities/measure_gas.json
+++ b/.homeycompose/capabilities/measure_gas.json
@@ -7,6 +7,7 @@
     "it": "Gas",
     "no": "Gass",
     "fr": "Gaz",
+    "dk": "Gas",
     "nl": "Gas"
   },
   "desc": {
@@ -16,6 +17,7 @@
     "it": "Utilizzo gas",
     "no": "Gass forbruk",
     "fr": "Utilisation gaz",
+    "dk": "Gasforbrug",
     "nl": "Gasverbruik"
   },
   "decimals": 4,
@@ -26,6 +28,7 @@
     "it": "L/minuto",
     "no": "L/minutt",
     "fr": "L/Minute",
+    "dk": "L/minuttet",
     "nl": "L/minuut"
   },
   "getable": true,
