--- a/.homeycompose/capabilities/measure_lpm_min.json
+++ b/.homeycompose/capabilities/measure_lpm_min.json
@@ -7,6 +7,7 @@
     "it": "Minimo",
     "no": "Minimum",
     "fr": "Minimum",
+    "dk": "Minimum",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
@@ -21,6 +22,7 @@
     "it": "L/minuto",
     "no": "L/minutt",
     "fr": "L/Minute",
+    "dk": "L/Minuttet",
     "nl": "L/minuut"
   },
   "decimals": 2
